# comp6400

./: .gitignore
homework0/: CMakeLists.txt  Makefile  gasket2.c  gasket3.c  tetra.c
homework1/: CMakeLists.txt
homework1/src/: homework1.c
homework2/: CMakeLists.txt  Makefile
homework2/include/shelby/: person.h  shelby.h
homework2/src/: homework2.cc  person.cc  shelby.cc
homework3/include/: CheckError.h
homework3/src/: homework3.cc
homework4/: CMakeLists.txt  Makefile  monkey.mtl  shelbyb.mtl
homework4/src/: main.cc
homework5/: CMakeLists.txt  Makefile  ground.mtl  person.mtl
homework5/src/: main.cc
